include/altdss/capi/dss.h

    /*! 
    Number of pole pairs of the induction generator
    */
    ALTDSS_CAPI_DLL void WindGens_Set_NPoles(int32_t Value);
    /*! 
    Air density in kg/m3
    */
    ALTDSS_CAPI_DLL void WindGens_Set_pd(double Value);
    /*! 
    Steady state output real power.
    */
    ALTDSS_CAPI_DLL void WindGens_Set_PSS(double Value);
    /*! 
    Non-zero values enable reactive power and voltage control in the dynamic model.
    */
    ALTDSS_CAPI_DLL void WindGens_Set_QFlag(int32_t Value);
    /*! 
    Q control mode (0:Q, 1:PF, 2:VV).
    */
    ALTDSS_CAPI_DLL void WindGens_Set_QMode(int32_t Value);
    /*! 
    Steady state output reactive power.
    */
    ALTDSS_CAPI_DLL void WindGens_Set_QSS(double Value);
    /*! 
    Rotor radius in meters
    */
    ALTDSS_CAPI_DLL void WindGens_Set_Rad(double Value);
    /*! 
    Per unit Thevenin equivalent resistance (R).
    */
    ALTDSS_CAPI_DLL void WindGens_Set_RThev(double Value);
    /*! 
    Cut-in speed for the wind generator
    */
    ALTDSS_CAPI_DLL void WindGens_Set_VCutIn(double Value);
    /*! 
    Cut-out speed for the wind generator
    */
    ALTDSS_CAPI_DLL void WindGens_Set_VCutOut(double Value);
    /*! 
    Steady state voltage magnitude.
    */
    ALTDSS_CAPI_DLL void WindGens_Set_Vss(double Value);
    /*! 
    Wind speed in m/s
    */
    ALTDSS_CAPI_DLL void WindGens_Set_WindSpeed(double Value);
    
    /*! 
    Per unit Thevenin equivalent reactance (X).
    */
    ALTDSS_CAPI_DLL void WindGens_Set_XThev(double Value);