src/CAPI/CAPI_WindGens.pas


    elem.WindModelDyn.N_WTG := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.RecalcElementData();
        elem.YPrimInvalid := true;
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_NPoles(Value: Integer); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.GenVars.Poles := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.RecalcElementData();
        elem.YPrimInvalid := true;
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_pd(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.GenVars.pd := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.RecalcElementData();
        elem.YPrimInvalid := true;
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_PSS(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.WindModelDyn.PSS := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        //TODO: do we need to reinit the dyn model?
    end;    
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_QFlag(Value: Integer); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.WindModelDyn.QFlg := Value;
    // No direct side effects, will affect the next solution
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_QMode(Value: Integer); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.WindModelDyn.QMode := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.RecalcElementData();
        elem.YPrimInvalid := true;
        //TODO: do we need to reinit the dyn model?
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_QSS(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.WindModelDyn.QSS := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        //TODO: do we need to reinit the dyn model?
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_Rad(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.GenVars.Rad := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.RecalcElementData();
        elem.YPrimInvalid := true;
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_RThev(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.WindModelDyn.Zthev.re := Value;
    // No direct side effects
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_VCutIn(Value: Double); CDECL;
var
    elem: TObj;
    prev: Double;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    prev := elem.GenVars.VCutIn;
    elem.GenVars.VCutIn := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        if ((elem.ShapeFactor.re < prev) <> (elem.ShapeFactor.re < elem.GenVars.VCutin)) then
        begin
            elem.RecalcElementData();
            elem.YPrimInvalid := true;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_VCutOut(Value: Double); CDECL;
var
    elem: TObj;
    prev: Double;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    prev := elem.GenVars.VCutOut;
    elem.GenVars.VCutOut := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        if ((prev > elem.GenVars.VCutout) <> (elem.ShapeFactor.re > elem.GenVars.VCutout)) then
        begin
            elem.RecalcElementData();
            elem.YPrimInvalid := true;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_Vss(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.WindModelDyn.Vss := Value;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_WindSpeed(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.WindModelDyn.VWind := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.RecalcElementData();
        elem.YPrimInvalid := true;
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_XThev(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.WindModelDyn.Zthev.im := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.RecalcElementData();
    end;
end;
//------------------------------------------------------------------------------
end.
